auth-service/k8s/application/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: helpme
  labels:
    app: helpme-auth-service
    tier: application
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - port: 3333
    targetPort: 3333
    protocol: TCP
    name: http
  selector:
    app: helpme-auth-service
